# Smile_Mouth_Detection

./: CMakeCache.txt  CMakeLists.txt  Config.cpp  Config.h  FaceDetection_am6176.cpp  FaceDetection_am6176.h  FaceLandmark.cpp  FaceLandmark.hpp  FacialUnderstanding  Makefile  ModelLoader.cpp  NMS.cpp  NMS.h  README.md  Transforms.cpp  Transforms.h  Types.cpp  Types.h  am6176_run.cpp  cmake_install.cmake  explanation.txt  render.cpp  render.h  run.cpp  test
C++/: CMakeLists.txt  Config.cpp  FaceDetection_am6176.cpp  FaceDetection_am6176.h  Transforms.cpp  Transforms.h  Types.cpp  Types.h  am6176_run.cpp
Python_debug/: am6176_FaceDetectionTest.py  am6176_face.py  am6176_run.py  am6176_transform.py  config.py  errors.py  land.py  mouth_classifier.py  nms.py  requirements.txt  smile_classifier.py  typess.py  utils_train.py
include/flatbuffers/: allocator.h  array.h  base.h  buffer.h  buffer_ref.h  code_generator.h  code_generators.h  default_allocator.h  detached_buffer.h  file_manager.h  flatbuffer_builder.h  flatbuffers.h  flex_flat_util.h  flexbuffers.h  grpc.h  hash.h  idl.h  minireflect.h  reflection.h  reflection_generated.h  registry.h  stl_emulation.h  string.h  struct.h  table.h  util.h  vector.h  vector_downward.h  verifier.h
